--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
-
+.holder {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 /* Your CSS Code here. */
+.item{
+	color:red;
+}
